# NippyInC

./: .gitignore  :w  CMakeLists.txt  LICENSE  README.md  main.c  main.nip
include/: ast.h  parse_nip_files.h  tokenizer.h
lib/color_printf_lib/include/: color_print.h
lib/color_printf_lib/src/: color_print.c
lib/file_functions_lib/include/: file_functions.h
lib/file_functions_lib/src/: file_functions.c
scripts/: build_script.sh
src/: :W  :w  CMakeLists.txt  ]  ast.c  ast.h  color_print.c  color_print.h  d.txt  device  file_functions.c  file_functions.h  git_script.sh  ideas.txt  lexer.c  lexer.h  main.c  main.nip  memory_log.txt  parse_nip_files.c  token_map.c  token_map.h  tokenizer.c  variable_map.c  variable_map.h
src/file_functions_lib/: file_functions.c
src/lexer/: ast.c  ast.h  tokenizer.c  tokenizer.h  variable_map.c  variable_map.h
src/logs/: memory_log.txt
src/scripts/: build_script.sh  debug_script.sh  memory_debug_script.sh
src/tests/: add_operator_test.nip  lexer_tests.c  lexer_tests.h  test_file.nip
tests/: lexer_tests.c  test_file.nip
tests/src/: lexer_tests.c
